# health-optimization-knowledge-graph

./: .gitignore  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
data/agents/peptides/: bpc-157.yaml  ghk-cu.yaml  tb-500.yaml
data/evidence-claims/: beef-tallow-associated-skin-barrier.yaml  bpc157-mechanistically-supports-tissue-repair.yaml  caffeine-topical-supports-hair-density.yaml  dht-increases-aga-severity.yaml  dutasteride-decreases-dht.yaml  dutasteride-increases-hair-density.yaml  estradiol-decreases-aga-severity.yaml  finasteride-decreases-aga-severity.yaml  finasteride-decreases-dht.yaml  finasteride-increases-hair-density.yaml  ghk-cu-increases-hair-density.yaml  ghk-cu-increases-skin-collagen.yaml  hgh-associated-with-hair-growth.yaml  ketoconazole-decreases-aga-severity.yaml  ketoconazole-increases-hair-density.yaml  microneedling-increases-hair-density.yaml  minoxidil-increases-hair-density-aga.yaml  nmn-increases-nad-levels.yaml  prp-increases-hair-density.yaml  pygeum-supports-hair-density.yaml  rlt-increases-hair-density.yaml  rlt-increases-skin-collagen.yaml  ru58841-decreases-aga-severity.yaml  saw-palmetto-supports-hair-density.yaml  tb500-increases-hair-density.yaml  testosterone-increases-dht.yaml  vitamin-d3-lightly-supports-hair-density.yaml
docs/: index.md
schema/: agents.yaml  core.yaml  evidence.yaml  health_optimization_kg.yaml  outcomes.yaml
scripts/: build_graph.py
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  types.ts
(+64 files in other folders)
