[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-optimization-kg"
version = "0.1.0"
description = "Health Optimization Knowledge Graph — schema, data pipeline, and tooling"
requires-python = ">=3.11"

dependencies = [
  # LinkML core — schema authoring, validation, and code generation
  "linkml>=1.8.0",
  "linkml-runtime>=1.8.0",

  # LinkML generators used in Makefile targets
  "linkml-model>=1.8.0",

  # Data handling
  "pyyaml>=6.0",
  "jsonschema>=4.21.0",

  # Documentation
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-mermaid2-plugin>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

llm = [
  # LLM interrogation pipeline (optional — requires Ollama running locally
  # or an API key for cloud providers)
  "llama-index>=0.10.0",
  "llama-index-llms-ollama>=0.1.0",
  "llama-index-embeddings-ollama>=0.1.0",
  "llama-index-graph-stores-kuzu>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
